# OhTuVinkit

./: .coveragerc  .gitignore  .pylintrc  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
documents/: raportti.md
src/: AppLibrary.py  app.py  config.py  db.py  index.py  initialize_database.py  routes.py
src/entities/: tip.py
src/repositories/: tips_repository.py  user_repository.py  users.py
src/services/: tips_service.py  user_service.py
src/static/: style.css
src/templates/: index.html  layout.html  new_book_tip.html  register.html  welcome.html
src/tests/: tips_repository_test.py  tips_service_test.py  user_repository_test.py  user_service_test.py
src/tests/robot/: AppLibrary.py  add_tip.robot  login.robot  logout.robot  register.robot  remove_tip.robot  resource.robot  tip.robot  tips.robot
