[tool.poetry]
name = "ohtuvinkit"
version = "0.1.0"
description = "Ryhmä 1 miniprojekti. Ohjelmistotuotantokurssi 2022"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
robotframework = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
